--- a/css/content.css
+++ b/css/content.css
@@ -127,8 +127,8 @@ nav a:hover
 footer
 {
 	text-align: center;
-	position: absolute;
+/*	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 10%;
+	height: 10%;*/
 }
