--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,21 @@
+@keyframes fade
+{
+	from
+	{
+		opacity: 0;
+	}
+	to
+	{
+		opacity: 1;
+	}
+}
+
 html
 {
 	background-color: #F0F0F0;
 	font-family: Open Sans;
 	text-align: center;
+	animation: fade 2s;
 }
 
 html, body
@@ -53,6 +66,7 @@ nav
 nav a
 {
 	padding: 0% 1%;
+	transition: 0.5s;
 }
 
 nav a:hover
