--- a/css/content.css
+++ b/css/content.css
@@ -106,12 +106,18 @@ nav a
 	color: white;
 	font-size: 1.3em;
 	padding: 0.5% 2%;
+	transition: 0.5s;
 }
 
 nav a:hover
 {
 	background-color: #1E90FF;
 	box-shadow: 0em 0.3em 0.5em #1E90FF;
+}
+
+#contact a
+{
+	transition: 0.25s;
 }
 
 #contact a:hover
