--- a/css/content.css
+++ b/css/content.css
@@ -57,12 +57,17 @@ h3
 	margin-left: 0%;
 }
 
+h4
+{
+	font-weight: lighter;
+}
+
 .object
 {
 	margin: 0% 8%;
 }
 
-#desc
+.desc
 {
 	margin: 1% 3.5%;
 }
@@ -133,8 +138,4 @@ nav a:hover
 footer
 {
 	text-align: center;
-/*	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 10%;*/
 }
