--- a/css/home.css
+++ b/css/home.css
@@ -26,21 +26,14 @@ html, body
 
 body
 {
-	position: fixed;
-	left: 50%;
-	top: 50%;
-	height: 2%;
-    margin-top: -12%;
-    width: 80%;
-    margin-left: -40%;
-    padding-bottom: 35%;
+	height: 100%;
+    margin: 17% 0%;
 }
 
-h1
+#logo
 {
-	font-size: 400%;
-	font-weight: lighter;
-	margin-bottom: 0;
+	width: 35em;
+	max-width: 100%;
 }
 
 a
@@ -85,5 +78,4 @@ footer
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 10%;
 }
