--- a/css/content.css
+++ b/css/content.css
@@ -12,7 +12,7 @@
 
 html
 {
-	background-color: #F0F0F0;
+	background-color: black;
 	font-family: Open Sans
 }
 
@@ -26,7 +26,7 @@ html, body
 a
 {
 	text-decoration: none;
-	color: black;
+	color: white;
 }
 
 li
@@ -48,13 +48,13 @@ header, #content
 	animation: fade 1s;
 }
 
-h1, h2, h3
+h1, h2
 {
 	font-weight: lighter;
 }
 
 
-#logo
+h1
 {
 	margin-top: 3%;
 	margin-left: 5%;
@@ -62,19 +62,24 @@ h1, h2, h3
 	max-width: 100%;
 }
 
+h1 a
+{
+	transition: 0.5s;
+}
+
+h1 a:hover
+{
+	color: lightgrey;
+}
+
+h1 a:active
+{
+	color: grey;
+}
+
 h2
 {
 	margin-left: 5%;
-}
-
-h3
-{
-	margin-left: 0%;
-}
-
-h4
-{
-	font-weight: lighter;
 }
 
 .object
@@ -92,18 +97,19 @@ h4
 	font-size: 200%;
 	padding: 1% 1%;
 	transition: 0.5s;
+	color: white;
 }
 
 #list li:hover
 {
-	background-color: #E6E6E6;
+	background-color: lightgrey;
+	color: grey;
 }
 
-#list img
+#list li:active
 {
-	margin: 0;
-	width: 8em;
-	max-width: 100%;
+	background-color: grey;
+	color: white;
 }
 
 #list p
@@ -111,53 +117,8 @@ h4
 	font-size: 50%;	
 }
 
-#navigation
-{
-	padding: 0.3% 19%;
-}
-
-#navigation li
-{
-	display: inline;
-}
-
-nav
-{
-	background-color: #00CCFF;
-	box-shadow: 0em 0.3em 0.5em #888888;
-}
-
-nav a
-{
-	text-decoration: none;
-	color: white;
-	font-size: 1.3em;
-	padding: 0.5% 2%;
-	transition: 0.5s;
-}
-
-nav a:hover
-{
-	background-color: #1E90FF;
-	box-shadow: 0em 0.3em 0.5em #1E90FF;
-}
-
-#contact a
-{
-	transition: 0.25s;
-}
-
-#contact a:hover
-{
-	color: #00CCFF;
-}
-
-#contact a:active
-{
-	color: #1E90FF;
-}
-
 footer
 {
 	text-align: center;
+	color: white;
 }
